--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Participa al 21è Torneig de les Arts Marcials</title>
-        <link rel="icon" type="image/x-icon" href="http://boladedrac.altavooz.com/img/boladedrac.png">
+        <link rel="icon" type="image/x-icon" href="http://elgrantorneig.com/static/img/boladedrac.png">
         <meta name="21è Gran Torneig de les Arts Marcials" content="Participa al 21è Gran Torneig de les Arts Marcials">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:image" href="https://static.wikia.nocookie.net/boladedrac-cat/images/a/a0/Personatges_Saga_21%C3%A8_Torneig_d%27Arts_Marcials.jpg/revision/latest/scale-to-width-down/250?cb=20130224144639&path-prefix=ca">
