--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
  
     <nav class = "navbar navbar-light bg-light">
         <div class="container">
-            <a href="/" class = "navbar-brand"><h3>BOLA DE DRAC</h3></a><!---<img src="../El joc de Bola de Drac/img/boladedrac.png" width="30" style="left: 50%; position:absolute;">---><h3 id="counter" style="float: right;" ></h3>
+            <a href="/" class = "navbar-brand"><h3>EL GRAN TORNEIG</h3></a><!---<img src="../El joc de Bola de Drac/img/boladedrac.png" width="30" style="left: 50%; position:absolute;">---><h3 id="counter" style="float: right;" ></h3>
         </div>
     </nav> 
 
