--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Participa al 21è Gran Torneig de les Arts Marcials de Bola de Drac</title>
+        <title>El Gran Torneig Mundial de les Arts Marcials de Bola de Drac</title>
         <link rel="icon" type="image/x-icon" href="https://elgrantorneig.com/static/img/boladedrac.png">
         <meta name="21è Gran Torneig de les Arts Marcials de Bola de Drac" content="Participa al 21è Gran Torneig de les Arts Marcials de Bola de Drac">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -82,7 +82,7 @@
         <!-- Copyright -->
         <div style="position: absolute; bottom: 0;width: 100%; background-color: rgb(0, 0, 0, 0.3); position: absolute; bottom: 0; width: 100%; height: 50px; line-height: 50px; color: rgb(255, 255, 255); display: grid;place-content: center; align-self: flex-end;">
             
-            <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Participa al 21è Gran Torneig de les Arts Marcials" data-a2a-url="http://boladedrac.altavooz.com/" >
+            <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Participa al 21è Gran Torneig de les Arts Marcials de Bola de Drac" data-a2a-url="https://elgrantorneig.com/" >
                 <a class="a2a_dd">
                     <img src="/static/img/share2.png" width="27px" style="margin-right: 10px;">
                 </a>
