--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,15 @@
 
 
         </script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-GLPKLGQCDB"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-GLPKLGQCDB');
+        </script>
 
 
     </head>
