--- a/templates/404.html
+++ b/templates/404.html
@@ -18,9 +18,8 @@
         <link rel="icon" type="image/x-icon" href="https://elgrantorneig.com/static/img/boladedrac.png">
         <meta name="21è Gran Torneig de les Arts Marcials de Bola de Drac" content="Participa al 21è Gran Torneig de les Arts Marcials de Bola de Drac">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:title" content="El Gran Torneig Mundial de les Arts Marcials">
-        <meta property="og:description" content="El Gran Torneig Mundial de les Arts Marcials de Bola de Drac">
         <meta property="og:image" href="https://static.wikia.nocookie.net/boladedrac-cat/images/a/a0/Personatges_Saga_21%C3%A8_Torneig_d%27Arts_Marcials.jpg/revision/latest/scale-to-width-down/250?cb=20130224144639&path-prefix=ca">
+        <meta property="og:description" content="Participa al 21è Gran Torneig de les Arts Marcials de Bola de Drac">
         <link rel="stylesheet" href="static/css/stylesheet.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -55,38 +54,28 @@
  
     <nav class = "navbar navbar-light bg-light">
         <div class="container">
-            <a href="/" class = "navbar-brand"><h3>EL GRAN TORNEIG</h3></a><!---<img src="../El joc de Bola de Drac/img/boladedrac.png" width="30" style="left: 50%; position:absolute;">---><h3 id="counter" style="float: right;" ></h3>
+            <a href="/" class = "navbar-brand"><h3>EL GRAN TORNEIG</h3></a>
         </div>
     </nav> 
 
     <!--CONTENT-->
   
-    <div class="container">
-        <h3><div id= 'level' class="row" style="float: left; margin-left: 5px;"></div><div id='title'></div> <div id= 'score' class="row" style="float: right; margin-right: 5px;"> </div></h3>
-    </div>
-
-
-    
-
-    <div id = 'content'>
-    </div>
-
-    <label id="allScores" value="{{ allScores }}"> </label>
-
-    
-    
-    
-   
-    <div id='inscripcio'></div>
-
-    <div id="content">
-        <div class="container">
-            <div class="row pt-3">
-                <div id='videofoto' class="col-xs-12 col-sm-12 col-md-8 col-lg-8"></div><div id='boxscores' class="col-xs-12 col-sm-12 col-md-4 col-lg-4"></div>                               
-            </div>
+    <section>
+        <br>
+        <h2 class="text-center">UPS!</h2>
+        <h4 class="text-center">El torneig encara no pot començar perquè en Goku està esmorzant...</h4>
+        <br>
+        <div class="text-center">
+            <p><a href="/"><button type="button" class="btn btn-success" >Torna-ho a intentar en uns instants</button></a></p>
+            <br>
+            <img src="/static/img/gokumenjant.gif" >
         </div>
-    </div>
- 
+
+    </section>
+
+    
+    
+
 
 
     
@@ -122,5 +111,8 @@
     <script async src="https://static.addtoany.com/menu/page.js"></script>
     </body>
 </html>
+
+
+
 
 
