--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,10 @@
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>El Gran Torneig Mundial de les Arts Marcials de Bola de Drac</title>
+        <title>El Gran Torneig Mundial de les Arts Marcials</title>
         <link rel="icon" type="image/x-icon" href="https://elgrantorneig.com/static/img/boladedrac.png">
-        <meta name="21è Gran Torneig de les Arts Marcials de Bola de Drac" content="Participa al 21è Gran Torneig de les Arts Marcials de Bola de Drac">
+        <meta name="El Gran Torneig Mundial de les Arts Marcials" content="Participa al 21è Gran Torneig de les Arts Marcials de Bola de Drac">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:title" content="El Gran Torneig Mundial de les Arts Marcials">
-        <meta property="og:description" content="El Gran Torneig Mundial de les Arts Marcials de Bola de Drac">
         <meta property="og:image" href="https://static.wikia.nocookie.net/boladedrac-cat/images/a/a0/Personatges_Saga_21%C3%A8_Torneig_d%27Arts_Marcials.jpg/revision/latest/scale-to-width-down/250?cb=20130224144639&path-prefix=ca">
         <link rel="stylesheet" href="static/css/stylesheet.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
