--- a/templates/index.html
+++ b/templates/index.html
@@ -36,20 +36,16 @@
                     $("#videofoto").load('/videoyoutube')  
                 });
             });
-
-
         </script>
+
         
     </head>
 
     <body>
 
-        
-    <!-- <label for="fname">First name:</label> <input type="text" id="fname" name="fname">
-    <label for="lname">Last name:</label><input type="text" id="lname" name="lname">
-    <button type="submit" onclick='setScoresBBDD()'>Click Here to see your data</button>
 
-   NAVEGATION-->
+        
+    <!-- NAVEGATION-->
 
     <!--<div style="text-align: center">    
        	<audio controls autoplayloop> 
@@ -92,12 +88,10 @@
         </div>
     </div>
  
+    <!-- footer -->
 
-
-    
     <footer class="bg-light text-center text-lg-start">
         
-        <!-- Copyright -->
         <div style="position: absolute; bottom: 0;width: 100%; background-color: rgb(0, 0, 0, 0.3); position: absolute; bottom: 0; width: 100%; height: 50px; line-height: 50px; color: rgb(255, 255, 255); display: grid;place-content: center; align-self: flex-end;">
             
             
@@ -118,7 +112,7 @@
                 a2a_config.locale = "ca";
             </script>
         </div>
-        <!-- Copyright -->
+
     </footer>
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
