--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -58,11 +58,20 @@ table {
 
 }
 
-
-
 html {
     position: relative;
     min-height: 100%;
+}
+
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('/static/img/loader.gif') 50% 50% no-repeat rgb(249,249,249);
+    opacity: .8;
 }
 
 
