--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -5,6 +5,7 @@ body {
     background-size: cover;
     margin-bottom: 60px;
     padding-bottom: 100px;
+    padding-top:80px;
 }
 h3 {
     color:rgb(228, 7, 7);
