--- a/templates/404.html
+++ b/templates/404.html
@@ -52,9 +52,9 @@
     	</audio>
     </div>-->
  
-    <nav class = "navbar navbar-light bg-light">
+    <nav class = "navbar fixed-top navbar-light bg-light">
         <div class="container">
-            <a href="/" class = "navbar-brand"><h3>EL GRAN TORNEIG</h3></a>
+            <a href="/" class = "navbar-brand"><img src="/static/img/home.png" width="35px"></a>
         </div>
     </nav> 
 
