--- a/templates/index.html
+++ b/templates/index.html
@@ -43,8 +43,14 @@
 
     <body>
 
+        <div class="loader"></div>
 
-        
+        <script> 
+            $(document).ready(function() {
+                $(".loader").fadeOut("fast");
+            });
+        </script> 
+
     <!-- NAVEGATION-->
 
     <!--<div style="text-align: center">    
