--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,6 @@
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-
             gtag('config', 'G-GLPKLGQCDB');
         </script>
 
@@ -37,19 +36,19 @@
                 });
             });
         </script>
-
         
-    </head>
-
-    <body>
-
-        <div class="loader"></div>
-
         <script> 
             $(document).ready(function() {
                 $(".loader").fadeOut("fast");
             });
         </script> 
+    </head>
+
+    <body>
+
+        <div id="loader" class="loader"></div>
+
+
 
     <!-- NAVEGATION-->
 
@@ -72,18 +71,12 @@
         <h3><div id= 'level' class="row" style="float: left; margin-left: 5px;"></div><div id='title'></div> <div id= 'score' class="row" style="float: right; margin-right: 5px;"> </div></h3>
     </div>
 
-
-    
-
     <div id = 'content'>
     </div>
 
     <label id="allScores" value="{{ allScores }}"> </label>
 
-    
-    
-    
-   
+
     <div id='inscripcio'></div>
 
     <div id="content">
