--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,6 @@
         
         <div style="position: absolute; bottom: 0;width: 100%; background-color: rgb(0, 0, 0, 0.3); position: absolute; bottom: 0; width: 100%; height: 50px; line-height: 50px; color: rgb(255, 255, 255); display: grid;place-content: center; align-self: flex-end;">
             
-            
             <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Participa al 21è Gran Torneig de les Arts Marcials de Bola de Drac" data-a2a-url="https://elgrantorneig.com/" >
                 <a class="a2a_default_style">
                     <img src="/static/img/share2.png" width="27px" style="margin-right: 10px;">
@@ -102,10 +101,10 @@
                 <a class="a2a_button_facebook"></a>
                 <a class="a2a_button_twitter"></a>
                 <a class="a2a_default_style">
-                    <a href="mailto:boladedrac@elgrantorneig.com"><img src="/static/img/contactus.png" width="33px"></a>
+                    <a href="mailto:boladedrac@elgrantorneig.com"><img src="/static/img/contactus.png" width="33px"></a><!--  &nbsp&nbsp<font size="3" color="black" face="courier">boladedrac@elgrantorneig.com</font>-->
                 </a>
 
-             </div>
+            </div>
             <script>
                 var a2a_config = a2a_config || {};
                 a2a_config.locale = "ca";
