--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,8 @@
     <div id="content">
         <div class="container">
             <div class="row pt-3">
-                <div id='videofoto' class="col-xs-12 col-sm-12 col-md-8 col-lg-8"></div><div id='boxscores' class="col-xs-12 col-sm-12 col-md-4 col-lg-4"></div>                               
+                <div id='videofoto' class="col-xs-12 col-sm-12 col-md-8 col-lg-8"></div>
+                <div id='boxscores' class="col-xs-12 col-sm-12 col-md-4 col-lg-4"></div>                               
             </div>
         </div>
     </div>
